<resources>
    <string name="app_name">PublicHouse</string>
    <string name="initialPrice">£0.00</string>
    <string name="cost">Cost</string>
    <string name="add">+</string>
    <string name="initialZero">0</string>
    <string name="minus">-</string>
    <string name="quantity">Number Of Pints</string>
    <string name="beer_logo">logo</string>
    <string name="information">info.</string>
    <string name="title_activity_aboutdrinks">about drinks</string>
    <string name="title_activity_about_drinks">aboutDrinks</string>
    <string name="UsualOpen">12:00pm</string>
    <string name="UsualClose">11:00pm</string>
</resources>